<resources>
    <string name="app_name"></string>
    <string name="Register">Register</string>
    <string name="Login">login</string>
    <string name="FullName">"Full Name: "</string>
    <string name="UserName">"Username: "</string>
    <string name="Email">"Email: "</string>
    <string name="Password">"Password: "</string>
    <string name="ConfirmPassword">"Confirm Password: "</string>
    <string name="SignUp">Sign Up!</string>
    <string name="LoginToTheAccount">LOGIN</string>
    <string name="ForgetPassword">Forgot your password?</string>
    <string name="EnterYourEmail">"Your Email Address: "</string>
    <string name="Enter">Enter</string>
    <string name="VerifyMessage">Click here to verify your email. </string>
    <string name="ResendEmail"> Resend Email</string>
    <string name="ChangePassword">Change Password</string>
    <string name="MyAccount">My Account</string>
    <string name="AboutMe">About Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Done">Done</string>
    <string name="Age">"Age: "</string>
    <string name="addMe">Add</string>
    <string name="hello_world">Hello world</string>
    <string name="Sex">Sex</string>
    <string name="Male">male</string>
    <string name="LookingFor">"Looking For: "</string>
    <string name="Bio">Bio: </string>
    <string name="AddImage">Your Profile Image</string>
    <string name="Messages">Messages:</string>
    <string name="Matches">matches:</string>
    <string name="YouHaveSeen">You Have Seen Everyone.\n
                                Come Back Later.</string>
    <string name="TryAgainLater"></string>

</resources>
