<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingLeft="70dp"
    android:paddingRight="70dp"
    android:paddingBottom="15dp"
    >

    <ImageView
        android:layout_gravity="center"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_marginBottom="80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailToLogin"
        android:text="@string/Email"
        android:layout_gravity="left"
        android:textSize="11dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditLogin"
        android:layout_gravity="left"
        android:background="@color/gray"

        />
    <View
        android:layout_width="10dp"
        android:layout_height="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordLogin"
        android:text="@string/Password"
        android:layout_gravity="left"
        android:textSize="11dp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEditLogin"
        android:layout_gravity="left"
        android:background="@color/gray"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginToTheAccount"
            android:text="@string/LoginToTheAccount"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/signupselecter"
            />
    </RelativeLayout>

</LinearLayout>