<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingLeft="70dp"
    android:paddingRight="70dp"
    android:paddingBottom="15dp"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:cardElevation="0dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/cardView1"
        app:cardCornerRadius="40dp">

    <ImageView
        android:cropToPadding="true"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:id="@+id/profilePic"
        android:layout_centerHorizontal="true"
        android:src="@drawable/addimage"
        android:layout_marginBottom="20dp"
        />
    </androidx.cardview.widget.CardView>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:text="@string/FullName"
        android:textSize="11dp"
        android:textColor="#4B86B4"
        android:layout_below="@+id/cardView1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:id="@+id/nameEdit"
        android:layout_gravity="left"
        android:background="@drawable/image_boreder"
        android:inputType="text"
        android:padding="5dp"
        android:textColor="#3C3C3C"
        android:textSize="15dp"

        android:layout_below="@+id/name"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
    <View
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:id="@+id/view1"
        android:layout_below="@+id/nameEdit"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myAge"
        android:text="@string/Age"
        android:textSize="11dp"
        android:layout_below="@id/view1"
        android:textColor="#4B86B4"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
    <EditText
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:id="@+id/myAgeEdit"
        android:layout_gravity="left"
        android:background="@drawable/image_boreder"
        android:inputType="number"
        android:padding="5dp"
        android:textColor="#3C3C3C"
        android:textSize="15dp"

        android:layout_below="@+id/myAge"
        />
    <View
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:id="@+id/view2"
        android:layout_below="@+id/myAgeEdit"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bio"
        android:text="@string/Bio"
        android:textSize="11dp"
        android:textColor="#4B86B4"
        android:layout_below="@+id/view2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/bioEdit"
        android:layout_gravity="left"
        android:background="@drawable/border10"
        android:inputType="textMultiLine"
        android:textSize="15dp"
        android:gravity="start"
        android:paddingTop="5dp"
       android:padding="5dp"
        android:textColor="#3C3C3C"
        android:layout_below="@+id/bio"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:maxLength="140"

        />
    <View
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:id="@+id/view3"
        android:layout_below="@+id/bioEdit"
        />






    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/done"
        android:text="@string/Done"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/signupselecter"
        />



</RelativeLayout>