<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Name_Age"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingLeft="70dp"
    android:paddingRight="70dp"
    android:paddingBottom="15dp"
    >

    <ImageView
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/profilePic"
        android:background="@drawable/image_boreder"
        android:layout_centerHorizontal="true"
        android:src="@drawable/addimage"
        android:layout_marginBottom="20dp"
        android:scaleType="centerCrop"
        />





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:text="@string/FullName"
        android:textSize="11dp"
        android:textColor="#4B86B4"
        android:layout_below="@+id/profilePic"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:id="@+id/nameEdit"
        android:layout_gravity="left"
        android:background="@drawable/image_boreder"
        android:inputType="text"
        android:layout_below="@+id/name"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
    <View
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:id="@+id/view1"
        android:layout_below="@+id/nameEdit"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myAge"
        android:text="@string/Age"
        android:textSize="11dp"
        android:layout_below="@id/view1"
        android:textColor="#4B86B4"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
    <EditText
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:id="@+id/myAgeEdit"
        android:layout_gravity="left"
        android:background="@drawable/image_boreder"
        android:inputType="number"
        android:layout_below="@+id/myAge"
        />
    <View
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:id="@+id/view2"
        android:layout_below="@+id/myAgeEdit"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sex"
        android:text="@string/Sex"
        android:textSize="11dp"
        android:layout_below="@id/view2"
        android:textColor="#4B86B4"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
    <RadioGroup
        android:id="@+id/groupSex"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_alignParentRight="true"


        android:layout_below="@id/sex"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="27dp" >
        <RadioButton
            android:id="@+id/maleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:textColor="#5A5A5A"
            android:onClick="sexChoice"

            android:text="Male" />
        <View
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            />
        <RadioButton
            android:id="@+id/femaleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:textColor="#5A5A5A"
            android:onClick="sexChoice"

            android:text="Female" />
    </RadioGroup>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lookingFor"
        android:text="@string/LookingFor"
        android:textSize="11dp"
        android:layout_below="@id/groupSex"
        android:textColor="#4B86B4"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
    <RadioGroup
        android:id="@+id/groupLookingFor"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/lookingFor"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="27dp" >
        <RadioButton
            android:id="@+id/maleLookingFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:textColor="#5A5A5A"
            android:onClick="lookingForChoice"
            android:text="Male" />
        <View
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            />
        <RadioButton
            android:id="@+id/femaleLookingFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5A5A5A"
            android:textSize="10dp"
            android:onClick="lookingForChoice"
            android:text="Female" />
    </RadioGroup>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/done"
            android:text="@string/Done"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/signupselecter"
            />



</RelativeLayout>